# 105-matching-networks-finance

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: basic_matching.rs  bybit_live.rs  pattern_trading.rs
python/: matching_network.py
src/: lib.rs
src/network/: attention.rs  embedding.rs  fce.rs  matching.rs  mod.rs
src/strategy/: mod.rs  pattern_strategy.rs
src/training/: episodic.rs  mod.rs
src/utils/: metrics.rs  mod.rs
tests/: integration_test.rs
