[package]
name = "matching_networks_finance"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading Contributors"]
description = "Matching Networks for financial market pattern recognition and trading"
license = "MIT"
readme = "README.md"
repository = "https://github.com/suenot/machine-learning-for-trading"
keywords = ["machine-learning", "trading", "matching-networks", "meta-learning", "finance"]
categories = ["science", "finance"]

[lib]
name = "matching_networks_finance"
path = "src/lib.rs"

[[example]]
name = "basic_matching"
path = "examples/basic_matching.rs"

[[example]]
name = "pattern_trading"
path = "examples/pattern_trading.rs"

[[example]]
name = "bybit_live"
path = "examples/bybit_live.rs"

[dependencies]
# Core numerical computing
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-rand = "0.14"
rand = "0.8"
rand_distr = "0.4"

# Async runtime for API calls
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Bybit API
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Technical indicators
ta = "0.5"

# Statistics
statrs = "0.16"

# Parallel processing
rayon = "1.8"

# Environment variables
dotenvy = "0.15"

# Ring buffer for streaming data
ringbuf = "0.3"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = ["bybit"]
bybit = []
stock = []
full = ["bybit", "stock"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
